--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,14 +4,13 @@ main:
   #   url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   # - title: "About"
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
-  # - title: "Sample Posts"
-  #   url: /year-archive/
-  # - title: "Sample Collections"
-  #   url: /collection-archive/
-  # - title: "Sitemap"
-  #   url: /sitemap/
+  - title: "Sample Posts"
+    url: /year-archive/
+  - title: "Sample Collections"
+    url: /collection-archive/
   - title: "Publications"
     url: /publications/
-
+  - title: "Team"
+    url: /team/
   - title: "Curriculum Vitae"
     url: /files/CV-Shaojie_Hu.pdf
